[gd_scene load_steps=33 format=3 uid="uid://78svwunfasky"]

[ext_resource type="Script" uid="uid://cyvguba1sinbr" path="res://main.gd" id="1_hipmi"]
[ext_resource type="Shader" uid="uid://c1th2tmqhx4vk" path="res://shaders/swirl.gdshader" id="2_nsekx"]
[ext_resource type="Shader" uid="uid://cch6cvm8y3ctj" path="res://shaders/background.gdshader" id="3_yyqih"]
[ext_resource type="Shader" uid="uid://bjucio58erjia" path="res://textPixel.gdshader" id="4_p0n2i"]
[ext_resource type="Script" uid="uid://bhvcv2dadyt27" path="res://spinRoot.gd" id="5_qk73d"]
[ext_resource type="PackedScene" uid="uid://305jesit5qa0" path="res://slotItem.tscn" id="6_hrfpq"]
[ext_resource type="Resource" uid="uid://ckj5b7jr36la6" path="res://characters/banker.tres" id="7_nls7o"]
[ext_resource type="PackedScene" uid="uid://bbkoj3b4uu041" path="res://floatingPopup.tscn" id="8_twjhn"]
[ext_resource type="AudioStream" uid="uid://c0hhvn01tlsmf" path="res://audio/sfx/click-345983.mp3" id="9_sk0v3"]
[ext_resource type="Texture2D" uid="uid://di00f0xax1nek" path="res://itemframe.png" id="10_6inq3"]
[ext_resource type="Script" uid="uid://dk6yfsqvjbxdt" path="res://spinButton.gd" id="11_pfad3"]
[ext_resource type="Script" uid="uid://wgqbwppywr70" path="res://resetButton.gd" id="12_8irms"]
[ext_resource type="Texture2D" uid="uid://b5wc666rsbbvq" path="res://Screenshot 2025-08-27 173116.png" id="13_5t4wo"]
[ext_resource type="Shader" uid="uid://3wdmpkyh2bdv" path="res://shaders/spinnerBackground.gdshader" id="14_st4yi"]
[ext_resource type="Script" uid="uid://bwblh3pxtfgml" path="res://spinnerBackground.gd" id="15_th2ri"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4uoxc"]
shader = ExtResource("2_nsekx")
shader_parameter/speed = 0.001
shader_parameter/swirl_strength = 7.5
shader_parameter/scale = 1.5
shader_parameter/center_softness = 0.25
shader_parameter/color_a = Color(1, 0.936667, 0.8, 0.784314)
shader_parameter/color_b = Color(0.76, 0.73492, 0.6232, 0.784314)
shader_parameter/pixel_size = 0.01
shader_parameter/color_steps = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ktt6o"]
shader = ExtResource("3_yyqih")
shader_parameter/speed = 0.5
shader_parameter/swirl_strength = 1.5
shader_parameter/scale = 4.0
shader_parameter/center_softness = 2.5
shader_parameter/color_a = Color(1, 1, 1, 0.196078)
shader_parameter/color_b = Color(0, 0, 0, 0.0980392)
shader_parameter/pixel_size = 0.003

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxg6n"]
bg_color = Color(0, 0, 0, 1)
corner_radius_bottom_right = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1q3t"]
bg_color = Color(0, 0, 0, 0.784314)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v8me"]
bg_color = Color(0, 0, 0, 1)
corner_radius_bottom_left = 20
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcdcf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8oge"]
bg_color = Color(1, 0.95, 0, 1)
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dnsp1"]
shader = ExtResource("4_p0n2i")
shader_parameter/alpha_threshold = 0.5
shader_parameter/outline_radius = 2.0
shader_parameter/use_diagonals = true
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/fill_color = Color(1, 1, 1, 1)
shader_parameter/fill_mix = 0.0
shader_parameter/shadow_enabled = true
shader_parameter/shadow_offset_px = Vector2(2, 2)
shader_parameter/shadow_alpha = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sd2ej"]
bg_color = Color(0.282353, 0.270588, 0.235294, 0.784314)
border_width_left = 8
border_width_top = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7t0n"]
bg_color = Color(1, 1, 1, 0.392157)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n1q3t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4xle"]
bg_color = Color(0.258824, 0.713726, 1, 1)
border_width_left = 6
border_width_top = 8
border_width_right = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7xqi"]
bg_color = Color(0.964706, 0.172549, 0.145098, 1)
border_width_left = 8
border_width_top = 10
border_width_right = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_detail = 1
shadow_color = Color(1, 0, 0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ktt6o"]
blend_mode = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilgax"]
bg_color = Color(0.933333, 0.913725, 0.843137, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_llbac"]
bg_color = Color(1, 0.883333, 0, 0.588235)
corner_radius_top_right = 200
corner_radius_bottom_right = 200
expand_margin_right = 40.0
shadow_offset = Vector2(10, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mcdcf"]
shader = ExtResource("14_st4yi")
shader_parameter/resolution = Vector2(512, 512)
shader_parameter/time = 0.0
shader_parameter/panel_color = Vector4(1, 1, 1, 0.39)
shader_parameter/clip_height = 40.0
shader_parameter/wave_amp = 10.0
shader_parameter/wave_freq = 3.0
shader_parameter/wave_speed = 1.5
shader_parameter/ripple_center = Vector2(0, 0)
shader_parameter/ripple_start = 0.0
shader_parameter/ripple_speed = 0.0
shader_parameter/ripple_amp = 0.0
shader_parameter/pixel_size = 0.008
shader_parameter/color_steps = 50.0

[node name="mainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_hipmi")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.81, 0.73197, 0.5346, 1)

[node name="bigSwirl" type="ColorRect" parent="background"]
material = SubResource("ShaderMaterial_4uoxc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="backgroundGradient" type="ColorRect" parent="background"]
material = SubResource("ShaderMaterial_ktt6o")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="topUIMarginContainer" type="MarginContainer" parent="mainContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 50

[node name="topUIContainer" type="HBoxContainer" parent="mainContainer/topUIMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="mainContainer/topUIMarginContainer/topUIContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vxg6n")

[node name="roundLabel" type="RichTextLabel" parent="mainContainer/topUIMarginContainer/topUIContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_right = 1.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "ROUND 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="deadlineDisplay" type="Panel" parent="mainContainer/topUIMarginContainer/topUIContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n1q3t")

[node name="deadlineLabel" type="RichTextLabel" parent="mainContainer/topUIMarginContainer/topUIContainer/deadlineDisplay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "X COINS DUE IN Y ROUNDS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="characterDisplay" type="Panel" parent="mainContainer/topUIMarginContainer/topUIContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_1v8me")

[node name="classLabel" type="RichTextLabel" parent="mainContainer/topUIMarginContainer/topUIContainer/characterDisplay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
text = "BANKER "
horizontal_alignment = 1
vertical_alignment = 1

[node name="artifactContainer" type="HBoxContainer" parent="mainContainer"]
layout_mode = 2
alignment = 1

[node name="artifactSeparator" type="Panel" parent="mainContainer/artifactContainer"]
custom_minimum_size = Vector2(1000, 8)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mcdcf")

[node name="playMarginContainer" type="MarginContainer" parent="mainContainer"]
layout_mode = 2
size_flags_stretch_ratio = 3.5
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/playMarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/playMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="valuePanelBackground" type="Panel" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_r8oge")

[node name="valueLabel" type="RichTextLabel" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer/valuePanelBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "0 COINS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 250)
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="activeEffect" type="RichTextLabel" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dnsp1")
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_constants/line_separation = 30
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "PLACEHOLDER ACTIVE EFFECT TITLE"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ColorRect" type="ColorRect" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="itemPanelBackground" type="Panel" parent="mainContainer/playMarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_sd2ej")

[node name="spinMarginContainer" type="MarginContainer" parent="mainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 90

[node name="gameElementsContainer" type="VBoxContainer" parent="mainContainer/spinMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="spinRoot" type="Control" parent="mainContainer/spinMarginContainer/gameElementsContainer" node_paths=PackedStringArray("scroll_container", "slots_hbox")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 1
script = ExtResource("5_qk73d")
scroll_container = NodePath("spinner/spinnerTilesMargin/scrollContainer")
slots_hbox = NodePath("spinner/spinnerTilesMargin/scrollContainer/slotsHBox")
slot_item_scene = ExtResource("6_hrfpq")
class_data = ExtResource("7_nls7o")
floating_label_scene = ExtResource("8_twjhn")
pass_sfx = ExtResource("9_sk0v3")

[node name="spinner" type="MarginContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="spinnerBackgroundMargin" type="MarginContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/spinnerBackgroundMargin"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
alignment = 2

[node name="spinnerBackground" type="Panel" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/spinnerBackgroundMargin/VBoxContainer"]
custom_minimum_size = Vector2(1920, 300)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b7t0n")

[node name="spinnerTilesMargin" type="MarginContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_top = 40

[node name="scrollContainer" type="ScrollContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/spinnerTilesMargin"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="slotsHBox" type="HBoxContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/spinnerTilesMargin/scrollContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/separation = 20
alignment = 1

[node name="spinnerFrame" type="VBoxContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/spinnerFrame"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 2
theme_override_constants/separation = 0

[node name="rectTexture" type="NinePatchRect" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/spinnerFrame/HBoxContainer"]
material = SubResource("ShaderMaterial_n1q3t")
custom_minimum_size = Vector2(1920, 300)
layout_mode = 2
texture = ExtResource("10_6inq3")
region_rect = Rect2(3, 0, 122, 128)

[node name="selectorContainer" type="MarginContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0

[node name="selectorGrid" type="GridContainer" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/selectorContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 250
columns = 5

[node name="passiveSelectorL2" type="Panel" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/selectorContainer/selectorGrid"]
custom_minimum_size = Vector2(25, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4xle")

[node name="passiveSelectorL" type="Panel" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/selectorContainer/selectorGrid"]
custom_minimum_size = Vector2(25, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4xle")

[node name="activeSelector" type="Panel" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/selectorContainer/selectorGrid"]
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i7xqi")

[node name="passiveSelectorR3" type="Panel" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/selectorContainer/selectorGrid"]
custom_minimum_size = Vector2(25, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4xle")

[node name="passiveSelectorR4" type="Panel" parent="mainContainer/spinMarginContainer/gameElementsContainer/spinRoot/spinner/selectorContainer/selectorGrid"]
custom_minimum_size = Vector2(25, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4xle")

[node name="bottomUISpinContainer" type="MarginContainer" parent="mainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 0

[node name="spinButtonWrapper" type="MarginContainer" parent="mainContainer/bottomUISpinContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="mainContainer/bottomUISpinContainer/spinButtonWrapper"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="spinButton" type="Button" parent="mainContainer/bottomUISpinContainer/spinButtonWrapper/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_ktt6o")
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
script = ExtResource("11_pfad3")

[node name="spinText" type="RichTextLabel" parent="mainContainer/bottomUISpinContainer/spinButtonWrapper/HBoxContainer/spinButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Spin the highlighted bar and test your luck..."
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/normal_font_size = 34
text = "SPIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spinCounterHBox" type="HBoxContainer" parent="mainContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="spinCounterGrid" type="GridContainer" parent="mainContainer/spinCounterHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 3

[node name="spinCounter1" type="Panel" parent="mainContainer/spinCounterHBox/spinCounterGrid"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ilgax")

[node name="spinCounter2" type="Panel" parent="mainContainer/spinCounterHBox/spinCounterGrid"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ilgax")

[node name="spinCounter3" type="Panel" parent="mainContainer/spinCounterHBox/spinCounterGrid"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ilgax")

[node name="bottomUIMarginContainer" type="MarginContainer" parent="mainContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_top = 40

[node name="restartButton" type="Button" parent="mainContainer/bottomUIMarginContainer"]
custom_minimum_size = Vector2(125, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
text = "RESTART"
script = ExtResource("12_8irms")

[node name="RichTextLabel" type="RichTextLabel" parent="mainContainer/bottomUIMarginContainer/restartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="topUI" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="deadlineDisplay" type="HBoxContainer" parent="topUI"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="topUI/deadlineDisplay"]
layout_mode = 2
size_flags_vertical = 0

[node name="Control" type="Control" parent="topUI/deadlineDisplay/VBoxContainer"]
layout_mode = 2

[node name="goldDisplay" type="Panel" parent="topUI/deadlineDisplay/VBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_llbac")

[node name="RichTextLabel" type="RichTextLabel" parent="topUI/deadlineDisplay/VBoxContainer/goldDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 5.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 0, 0, 1)
text = "X GOLD / Y GOLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menuPopupContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="menuPopupContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.686275)

[node name="VBoxContainer" type="VBoxContainer" parent="menuPopupContainer/ColorRect"]
layout_mode = 2
offset_left = 460.0
offset_top = 290.0
offset_right = 1460.0
offset_bottom = 790.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="baseMenuScreen" type="MarginContainer" parent="menuPopupContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="menu" type="NinePatchRect" parent="menuPopupContainer/ColorRect/VBoxContainer/baseMenuScreen"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2

[node name="template" type="Sprite2D" parent="."]
position = Vector2(-1320, 370)
texture = ExtResource("13_5t4wo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="spinnerBackgroundWaveTest" type="Panel" parent="."]
visible = false
material = SubResource("ShaderMaterial_mcdcf")
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 460.0
offset_top = 50.0
offset_right = 460.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
mouse_filter = 2
script = ExtResource("15_th2ri")
